# a2a-mcp

./: README.md  TODO.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  test.yml
src/a2a_mcp/: __init__.py  anomaly_detection.py  self_healing.py
src/a2a_mcp/digital_twin/: feedback.py  replay.py  streaming.py
src/a2a_mcp/federation/: __init__.py  cluster_registry.py  cross_cluster_directory.py  federation_controller.py  federation_overview.md  federation_router.py
src/a2a_mcp/topology/: api.py  optimizer.py  registry.py
